@@ -7,12 +7,28 @@ itaka \(em On-demand screenshooting server
 .SH "DESCRIPTION" 
 .PP 
 Itaka is a on-demand screenshooting server based on the HTTP protocol. It integrates a specifically coded server to take screenshots on-demand when your machine is queried through a remote browser. It has a GTK GUI for client notification. 
+.SH OPTIONS
+Itaka follows the usual GNU command line syntax, with long
+options starting with two dashes (`-').
+A summary of options is included below.
+.TP
+.B \-h, \-\-help
+Show summary of options.
+.TP
+.B \-v, \-\-version
+Show version of program.
+.TP
+.B \-r, \-\-revision
+Show the revision of program.
+.TP
+.B \-d, \-\-debug
+Start in debug mode.
 .SH "SEE ALSO" 
 .PP 
-/usr/share/doc/itaka/README.gz 
+/usr/share/doc/itaka/README 
 .SH "AUTHOR" 
 .PP 
-Itaka was written by: Marc E. santusmarc@gmail.com. 
+Itaka was written by: Marc E. <santusmarc@gmail.com>
 .PP 
 This manual page was written by Marc E. santusmarc@gmail.com for 
 the \fBDebian\fP system (but may be used by others).  Permission is 
