@@ -1,8 +1,10 @@
 0.2.1: 
  * Fixed a serious security bug in which /screenshot prompted no auth. Also
  fixed sending the wrong Content-Lenght for the screenshot. Report Itaka
- version on HTTP headers.
- * Added RPM packages (backport from trunk) and minor UI fixes.
+ version on HTTP headers
+ * Added RPM packages (backport from trunk) and minor UI fixes
+ * Vastly improved console argument handling
+ * Improved man page
 
 0.2 (I've been watching you...):
  * Rewrote the screenshot module completely to support active window
